--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>Random Greetings App... Using two apps!</h1>
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
